--- a/styles1.css
+++ b/styles1.css
@@ -71,14 +71,14 @@ h1 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 5px;
-    width: 300px;  /* Reduced from 450px */
-    height: 300px; /* Reduced from 450px */
+    width: 200px;  /* Reduced from 450px 300 t0 2*/
+    height: 200px; /* Reduced from 450px */
     margin: 20px auto;
 }
 
 .square {
-    width: 95px;  /* Reduced from 145px */
-    height: 95px; /* Reduced from 145px */
+    width: 75px;  /* Reduced from 145px 95 to 75 */
+    height: 75px; /* Reduced from 145px */
     border: 2px solid rgb(111, 112, 165);
     background-color: #f5f5f5;
     font-size: 30px; /* Reduced from 40px */
@@ -91,7 +91,7 @@ h1 {
 h1 {
     text-align: center;
     margin-top: 10px;
-    font-size: 24px; /* Adjusted title size */
+    font-size: 20px; /* Adjusted title size 24 to 20 */
 }
 
 .message {
